--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -42,5 +42,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/libDaumMapAndroid.jar')
-    compile files('libs/libDaumMapAndroid.jar')
+    implementation files('libs/libDaumMapAndroid.jar')
 }
